# audio-plugin-host

./: .clangd  .gitignore  Cargo.toml  README.md  build.rs
examples/sandboxxed-id-getter/: Cargo.toml  README.md
examples/sandboxxed-id-getter/src/: main.rs
examples/sdl-host/: Cargo.toml
examples/sdl-host/src/: main.rs
src/: audio_bus.rs  discovery.rs  error.rs  event.rs  heapless_vec.rs  host.rs  lib.rs  parameter.rs  plugin.rs  thread_check.rs  track.rs  utils.rs
src/formats/: clap.rs  mod.rs  vst2.rs
src/formats/vst3/: mod.rs  vst3_wrapper_sys.rs
vst3-wrapper/: CMakeLists.txt
vst3-wrapper/source/: bindings.h  common.h  componenthandler.cpp  componenthandler.h  plugframe.cpp  plugframe.h  plugininstance.cpp  plugininstance.h  vst3wrapper.cpp  vst3wrapper.h
