[package]
name = "audio-plugin-host"
version = "0.1.0"
edition = "2021"

[dependencies]
clap-sys = "0.5.0"
goblin = "0.9.3"
libloading = "0.8.8"
ringbuf = "0.4.8"
serde = { version = "*", features = ["derive"], optional = true }
vst = { path = "vendor/vst-rs", features = ["disable_deprecation_warning"] }

[build-dependencies]
cmake = "0.1"
cbindgen = "0.28.0"

[features]
serde = ["dep:serde"]
